load("@rules_apko//apko:defs.bzl", "apko_image")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

apko_image(
    name = "alpine-base",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
    }),
    config = "image.yml",
    contents = "@runner_lock//:contents",
    tag = "alpine:latest",
)

repo_tags = ["aos-deploy-runner:latest"]

pkg_tar(
    name = "bin-arm64_tar",
    srcs = ["//maestro/admin-cli:bin-arm64"],
    package_dir = "usr/local/bin",
)

oci_image(
    name = "image-arm64",
    base = ":alpine-base",
    cmd = ["/bin/sh"],
    tars = [":bin-arm64_tar"],
)

oci_tarball(
    name = "runner-container-image",
    image = ":image-arm64",
    repo_tags = repo_tags,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tarball",
    srcs = [":runner-container-image"],
    output_group = "tarball",
    visibility = ["//visibility:public"],
)
