load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client-cli_lib",
    srcs = ["main.go"],
    embedsrcs = ["build_number.txt"],
    importpath = "github.com/HitchPin/maestro/client-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//maestro/client-cli/client",
        "//maestro/client-cli/client/handlers",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "client-cli",
    embed = [":client-cli_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bin-x86_64",
    embed = [":client-cli_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bin-arm64",
    embed = [":client-cli_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
