load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_pkg//:pkg.bzl", "pkg_zip")

go_library(
    name = "lambda_lib",
    srcs = ["main.go"],
    importpath = "github.com/HitchPin/maestro/lambda",
    visibility = ["//visibility:private"],
    deps = [
        "//maestro/actions/util",
        "//maestro/lambda/apis",
        "@com_github_aquasecurity_lmdrouter//:lmdrouter",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_pkg_errors//:errors",
    ],
)

go_binary(
    name = "lambda_bin",
    embed = [":lambda_lib"],
    gotags = ["lambda.norpc"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "lambda_arm",
    platform = "@io_bazel_rules_go//go/toolchain:linux_arm64",
    target = ":lambda_bin",
)

copy_file(
    # Name of the rule.
    name = "copy_arm",
    # A Label
    src = ":lambda_arm",
    # Path of the output file, relative to this package.
    out = "bootstrap",
)

pkg_zip(
    name = "lambda",
    srcs = [
        ":copy_arm",
    ],
    package_file_name = "package.zip",
    visibility = ["//visibility:public"],
)
